tests/language_modules/05_records/invalid_semantics/duplicate_record_literal_field.vf
module DuplicateRecordLiteralField

type Account is record
    id: Integer
    active: Boolean
end record

procedure main()
is
    let account: Account = Account { id: 1, id: 2, active: true }
    check account.active
end main

end DuplicateRecordLiteralField